syntax = "proto3";

option java_multiple_files = true;
option java_package = "ca.on.oicr.icgc.argo.program_service";
option java_outer_classname = "ProgramServiceProto";

package program_service;

// The greeting service definition.
service Greeter {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {}

    rpc SayHelloAgain (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}
